<resources>
    <string name="appName">KebabBangu</string>
    <string name="stockButton">Estoque</string>
    <string name="ordersButton">Pedidos</string>
    <string name="registerButton">Caixa</string>
    <string name="title_activity_pedido">Pedidos</string>
    <string name="button_cancela_pedido">Cancelar Pedido</string>
    <string name="button_edita_pedido">Editar Pedido</string>
    <string name="button_inicia_caixa">Iniciar Caixa</string>
    <string name="button_encerra_caixa">Encerrar Caixa</string>
    <string name="button_add_product">Adicionar Novo Produto</string>
    <string name="button_edit_stock">Editar Estoque</string>
    <string name="button_add_stock">Adicionar Produto ao Estoque</string>
    <string name="spinner_title"> "Cardapio"</string>
    <string name="settingsButton">Configurações</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
