<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context="com.elaine.kebabbangu.activities.StockActivity">

    <ListView
        android:id="@+id/list_stock"
        android:layout_width="match_parent"
        android:layout_height="362dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"></ListView>

    <Button
        android:id="@+id/button_add_product"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/button_add_product"
        android:onClick="callCreateProduct"
        android:background="#FFCC00"
        android:layout_marginTop="360dp" />

    <Button
        android:id="@+id/button_edit_stock"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/button_edit_stock"
        android:onClick="callEditOrder"
        android:background="#FFCC00"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button_add_product"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_add_stock"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/button_add_stock"
        android:onClick="callEditOrder"
        android:background="#FFCC00"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button_edit_stock"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
