<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context="com.elaine.kebabbangu.activities.MainActivity" >

    <Button
        android:id="@+id/newOrderButton"
        android:layout_width="185dp"
        android:layout_height="210dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:onClick="callNewOrderScreen"
        android:layout_marginTop="50dp"
        android:background="@drawable/logo2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp">

        <Button
            android:id="@+id/ordersButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/ordersButton"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"
            android:onClick="callOrdersScreen"
            android:textColor="#FFFFFF"
            android:background="#FF0000"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/registerButton"
            android:onClick="callRegisterScreen"
            android:textColor="#FFFFFF"
            android:background="#FF0000"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp">

        <Button
            android:id="@+id/stockButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="xxx"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"
            android:textColor="#FFFFFF"
            android:background="#FF0000"/>

        <Button
            android:id="@+id/settingsButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="#FF0000"
            android:onClick="callSettingsScreen"
            android:text="@string/settingsButton"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</RelativeLayout>
